--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^2.0.55",
     "@ai-sdk/react": "^2.0.81",
+    "@modelcontextprotocol/sdk": "^1.20.2",
     "ai": "^5.0.81",
     "next": "16.0.0",
     "react": "19.2.0",
