--- a/packages/mcp-apps-widget/package.json
+++ b/packages/mcp-apps-widget/package.json
@@ -32,7 +32,13 @@
   },
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0",
-    "react-dom": "^18.0.0 || ^19.0.0"
+    "react-dom": "^18.0.0 || ^19.0.0",
+    "next": "^13.0.0 || ^14.0.0 || ^15.0.0 || ^16.0.0"
+  },
+  "peerDependenciesMeta": {
+    "next": {
+      "optional": true
+    }
   },
   "dependencies": {
     "clsx": "^2.0.0"
@@ -41,6 +47,7 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@types/node": "^20.0.0",
+    "next": "^16.0.0",
     "tsup": "^8.0.0",
     "typescript": "^5.0.0",
     "eslint": "^9.0.0",
