--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,5 +7,5 @@
   "access": "restricted",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
-  "ignore": ["ecosystem_ui", "example-chatbot"]
+  "ignore": ["example-chatbot"]
 }
