--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -57,6 +57,10 @@ jobs:
           version: 10.x
           run_install: false
 
+      - name: Update npm for Trusted Publishing
+        run: npm install -g npm@latest
+        # npm 11.5.1+ is required for OIDC trusted publishing
+
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
