--- a/packages/mcp-client/package.json
+++ b/packages/mcp-client/package.json
@@ -45,7 +45,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/general-intelligence-labs/mcp-apps-sdk.git",
+    "url": "https://github.com/General-Intelligence-Labs/mcp-apps-sdk",
     "directory": "packages/mcp-client"
   },
   "keywords": [
