--- a/examples/chatbot/package.json
+++ b/examples/chatbot/package.json
@@ -14,9 +14,8 @@
   "dependencies": {
     "@ai-sdk/openai": "^2.0.55",
     "@ai-sdk/react": "^2.0.81",
+    "@xalia/mcp-apps-sdk": "workspace:*",
     "@xalia/mcp-apps-widget": "workspace:*",
-    "@xalia/mcp-client": "workspace:*",
-    "@xalia/mcp-apps-adapters": "workspace:*",
     "ai": "^5.0.81",
     "next": "16.0.0",
     "react": "19.2.0",
